<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="7dp">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:labelFor="@id/nameText"
            android:text="@string/nombre_de_contacto"
            android:textColor="#C3070606"
            android:textSize="24sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/nameText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:clickable="true"
            android:ems="10"
            android:focusable="true"
            android:inputType="textPersonName"
            android:labelFor="@id/textView1"
            android:hint="Escribe tu nombre aquí.."
            android:textColor="#BF706C6C" tools:targetApi="o"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="7dp">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:labelFor="@id/phoneText"
            android:text="@string/tel_fono"
            android:textColor="#C3070606"
            android:textSize="24sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/phoneText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:inputType="number|text|phone"
            android:labelFor="@id/textView2"
            android:hint="Escribe tu nombre aquí.."
            android:textColor="#BF706C6C" tools:targetApi="o" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="7dp">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/grupo"
            android:textColor="#C3070606"
            android:textSize="24sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="3dp">

            <CheckBox
                android:id="@+id/familyCheck"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/familia"
                android:onClick="selectItem"
                android:textSize="17sp" />

            <CheckBox
                android:id="@+id/workCheck"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/trabajo"
                android:onClick="selectItem"
                android:textSize="17sp" />

            <CheckBox
                android:id="@+id/friendCheck"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/amigo"
                android:onClick="selectItem"
                android:textSize="17sp" />

            <CheckBox
                android:id="@+id/ocationalCheck"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ocacional"
                android:onClick="selectItem"
                android:textSize="17sp" />

        </LinearLayout>

    </LinearLayout>
</LinearLayout>